Fixed footer image width for mobiles

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="card-no-border card-footer">
-        <img src="./images/akaththi-farms-secondary-logo-full-color-300dpi%20.png" width="512" height="70" alt="Akaththi Farms Secondary Logo">
+        <img src="./images/akaththi-farms-secondary-logo-full-color-300dpi%20.png" alt="Akaththi Farms Secondary Logo">
         <p class="phone">&#128222; +91 80564 02434</p>
         <p class="email">&#9993; connect@akaththifarms.com</p>
         <p>&#169; 2024, Akaththi Farms. All rights reserved.</p>
