gogole analytics integration

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>Akaththi Farms | Fresh, Sustainable Mushrooms</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Akaththi Farms brings fresh, organic, and exotic mushrooms like Shiitake and Pink Oysters to Chennai. Urban farming with sustainable practices delivering fresh mushrooms in India.">
+    <meta name="keywords" content="exotic mushrooms, fresh mushrooms Chennai, Shiitake mushrooms India, organic mushrooms, urban farming Chennai, fresh mushrooms India, sustainable farming Chennai, urban farm Chennai">
+    <meta name="robots" content="index, follow">
     <title>Akaththi Farms</title>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="./images/akaththi-farms-icon.png" type="image/png">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZ3J83K6JX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-FZ3J83K6JX');
+    </script>
 </head>
 <body>
     <img src="./images/akaththi-farms-primary-logo-300dpi.png" alt="akaththi farms" class="logo">
