--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         gtag('config', 'G-FZ3J83K6JX');
     </script>
+    
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
@@ -43,6 +44,13 @@
         })(window, document, 'script', 'dataLayer', 'GTM-W8LF4T47');
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Disable Right-Click -->
+    <script>
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
+    </script>
 </head>
 
 <body>
