Updated address location and copyright year

--- a/index.html
+++ b/index.html
@@ -133,9 +133,15 @@
 
     <div class="card-no-border card-footer">
         <img src="./images/akaththi-farms-secondary-logo-full-color-300dpi%20.png" alt="Akaththi Farms Secondary Logo">
+        <p class="address-title">Registered Office</p>
+        <p class="address">5/419, Erukankadu Street, Pappampadi, Edappadi, Salem- 636306, Tamil Nadu, India</p>
+        <br/>
+        <p class="address-title">Research & Development</p>
+        <p class="address">Crescent Innovation and Incubation Council, Seethakathi Estate Located Inside, B.S. Abdur Rahman Crescent Institute of Science and Technology, GST Road, Vandalur, Chennai - 600048, Tamil Nadu, India</p>
+        <br/>
         <p class="phone">&#128222; +91 80564 02434</p>
         <p class="email">&#9993; connect@akaththifarms.com</p>
-        <p>&#169; 2024, Akaththi Farms. All rights reserved.</p>
+        <p>&#169; 2025, Akaththi Farms. All rights reserved.</p>
     </div>
 </body>
 
