--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <p class="address">5/419, Erukankadu Street, Pappampadi, Edappadi, Salem- 636306, Tamil Nadu, India</p>
         <br/>
         <p class="address-title">Research & Development</p>
-        <p class="address">Crescent Innovation and Incubation Council, Seethakathi Estate Located Inside, B.S. Abdur Rahman Crescent Institute of Science and Technology, GST Road, Vandalur, Chennai - 600048, Tamil Nadu, India</p>
+        <p class="address">Crescent Innovation and Incubation Council, <br/>Seethakathi Estate, <br/>B.S. Abdur Rahman Crescent Institute of Science and Technology, <br/>GST Road, Vandalur, Chennai - 600048, Tamil Nadu, India</p>
         <br/>
         <p class="phone">&#128222; +91 80564 02434</p>
         <p class="email">&#9993; connect@akaththifarms.com</p>
